Change api to keyboard

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -15,7 +15,7 @@
 <script>
     function sendKey(key) {
         var xhttp = new XMLHttpRequest();
-        xhttp.open("GET", "/api/" + key, true);
+        xhttp.open("GET", "/keyboard/" + key, true);
         xhttp.send();
     }
 </script>
