Add consumer device

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -7,15 +7,34 @@
 </style>
 
 <div>
+    <H1>Keyboard</H1>
     {{#each keyTable}}
         <button class="keyboard-button" onclick="sendKey('{{this}}')">{{this}}</button>
     {{/each}}
+</div>
+
+<div>
+    <H1>Consumer</H1>
+    <button class="keyboard-button" onclick="sendConsumer('PLAY')">Play</button>
+    <button class="keyboard-button" onclick="sendConsumer('STOP')">Stop</button>
+    <button class="keyboard-button" onclick="sendConsumer('REWIND')">&lt; Rewind</button>
+    <button class="keyboard-button" onclick="sendConsumer('FORWARD')">&gt; Forward</button>
+    <button class="keyboard-button" onclick="sendConsumer('HOME')">Home</button>
+    <button class="keyboard-button" onclick="sendConsumer('MUTE')">Mute</button>
+    <button class="keyboard-button" onclick="sendConsumer('VOLUP')">Volume +</button>
+    <button class="keyboard-button" onclick="sendConsumer('VOLDOWN')">Volume -</button>
 </div>
 
 <script>
     function sendKey(key) {
         var xhttp = new XMLHttpRequest();
         xhttp.open("GET", "/keyboard/" + key, true);
+        xhttp.send();
+    }
+
+    function sendConsumer(key) {
+        var xhttp = new XMLHttpRequest();
+        xhttp.open("GET", "/consumer/" + key, true);
         xhttp.send();
     }
 </script>
