--- a/views/firetv.hbs
+++ b/views/firetv.hbs
@@ -24,6 +24,7 @@
         background-color: transparent;
         margin: 0px;
         padding: 0px;
+        cursor: pointer;
     }
 
     .rb-sm-round {
